src/java/lib/Parser.cpp
#include "c4/Parser.h"

namespace c4j {

// Helper functions
bool isAssignmentOperator(int token) {
  if (TOK_OP_EQUALS == token
    || TOK_OP_PLUS_EQUALS == token
    || TOK_OP_MINUS_EQUALS == token
    || TOK_OP_MUL_EQUALS == token
    || TOK_OP_DIV_EQUALS == token
    || TOK_OP_AMPERSAND_EQUALS == token
    || TOK_OP_PIPE_EQUALS == token
    || TOK_OP_CARRET_EQUALS == token
    || TOK_OP_REM_EQUALS == token
    || TOK_OP_LSHIFT_EQUALS == token
    || TOK_OP_RSHIFT_EQUALS == token
    || TOK_OP_TRIPLE_RSHIFT_EQUALS == token) {
    return true;
  }

  return false;
}

bool isBasicType(int token) {
  if (TOK_KEY_BYTE == token
    || TOK_KEY_SHORT == token
    || TOK_KEY_CHAR == token
    || TOK_KEY_INT == token
    || TOK_KEY_LONG == token
    || TOK_KEY_FLOAT == token
    || TOK_KEY_DOUBLE == token
    || TOK_KEY_BOOLEAN == token) {
    return true;
  }

  return false;
}

bool isDecimalIntegerLiteral(int token) {
  if (token == TOK_DECIMAL_NUMERAL
    || token == TOK_DECIMAL_NUMERAL_WITH_INT_TYPE_SUFFIX) {
    return true;
  }

  return false;
}

bool isHexIntegerLiteral(int token) {
  if (token == TOK_HEX_NUMERAL
    || token == TOK_HEX_NUMERAL_WITH_INT_TYPE_SUFFIX) {
    return true;
  }

  return false;
}

bool isOctalIntegerLiteral(int token) {
  if (token == TOK_OCTAL_NUMERAL
    || token == TOK_OCTAL_NUMERAL_WITH_INT_TYPE_SUFFIX) {
    return true;
  }

  return false;
}

bool isBinaryIntegerLiteral(int token) {
  if (token == TOK_BINARY_NUMERAL
    || token == TOK_BINARY_NUMERAL_WITH_INT_TYPE_SUFFIX) {
    return true;
  }

  return false;
}

bool isIntegerLiteral(int token) {
  if (isDecimalIntegerLiteral(token)) { return true; }
  if (isHexIntegerLiteral(token)) { return true; }
  if (isOctalIntegerLiteral(token)) { return true; }
  if (isBinaryIntegerLiteral(token)) { return true; }
  return false;
}

bool isFloatingPointLiteral(int token) {
  return (token == TOK_DECIMAL_FLOATING_POINT_LITERAL
    || token == TOK_HEXADECIMAL_FLOATING_POINT_LITERAL);
}

bool isLiteral(int token) {
  return (isIntegerLiteral(token)
    || isFloatingPointLiteral(token)
    || token == TOK_CHARACTER_LITERAL
    || token == TOK_STRING_LITERAL
    || token == TOK_BOOLEAN_LITERAL
    || token == TOK_NULL_LITERAL);
}

bool isPrimary(int token) {
  return (token == TOK_OP_LT
    || token == TOK_LCURLY_BRACKET
    || token == TOK_KEY_THIS
    || token == TOK_KEY_SUPER
    || token == TOK_KEY_NEW
    || token == TOK_IDENTIFIER
    || isBasicType(token)
    || token == TOK_KEY_VOID
    || isLiteral(token)
    || token == TOK_LPAREN);
}

bool isClassOrInterfaceDeclarationCandidate(int token) {
  if (isClassOrInterfaceModifier(token)) {
    return true;
  }

  if (TOK_KEY_CLASS == token
    || TOK_KEY_ENUM == token
    || TOK_KEY_INTERFACE == token
    || TOK_ANNOTATION_TYPE_DECLARATION == token) {
    return true;
  }

  return false;
}

/*
 * ClassModifier: one of
 *   Annotation public protected private
 *   abstract static final strictfp
 */
bool isClassOrInterfaceModifier(int token) {
  if (TOK_ANNOTATION == token
    || TOK_KEY_PUBLIC == token
    || TOK_KEY_PROTECTED == token
    || TOK_KEY_PRIVATE == token
    || TOK_KEY_ABSTRACT == token
    || TOK_KEY_STATIC == token
    || TOK_KEY_FINAL == token
    || TOK_KEY_STRICTFP == token) {
    return true;
  }

  return false;
}

/*
 * ConstructorModifier: one of
 *   Annotation public protected private
 *
 * Modifier:
 *   Annotation
 *   public
 *   protected
 *   private
 *   static
 *   abstract
 *   final
 *   native
 *   synchronized
 *   transient
 *   volatile
 *   strictfp
 */
bool isModifierToken(int token) {
  if (TOK_KEY_PUBLIC == token
    || TOK_KEY_PROTECTED == token
    || TOK_KEY_PRIVATE == token
    || TOK_KEY_ABSTRACT == token
    || TOK_KEY_STATIC == token
    || TOK_KEY_FINAL == token
    || TOK_KEY_STRICTFP == token
    || TOK_ANNOTATION == token
    || TOK_KEY_NATIVE == token
    || TOK_KEY_SYNCHRONIZED == token
    || TOK_KEY_TRANSIENT == token
    || TOK_KEY_VOLATILE == token) {
    return true;
  }

  return false;
}

bool isInfixOp(int token) {
  if (TOK_OP_PIPE_PIPE == token
    || TOK_OP_AMPERSAND_AMPERSAND == token
    || TOK_OP_PIPE == token
    || TOK_OP_CARRET == token
    || TOK_OP_AMPERSAND == token
    || TOK_OP_EQUALS_EQUALS == token
    || TOK_OP_EXCLAMATION_EQUALS == token
    || TOK_OP_LT == token
    || TOK_OP_GT == token
    || TOK_OP_LT_EQUALS == token
    || TOK_OP_GT_EQUALS == token
    || TOK_OP_LSHIFT == token
    || TOK_OP_RSHIFT == token
    || TOK_OP_TRIPLE_RSHIFT == token
    || TOK_OP_PLUS == token
    || TOK_OP_MINUS == token
    || TOK_OP_MUL == token
    || TOK_OP_DIV == token
    || TOK_OP_REM == token) {
    return true;
  }

  return false;
}

bool isModifierOrMemberMemberDeclCandidate(int token) {
  // Prior to a MemberDecl
  if (isModifierToken(token)) {
    return true;
  }

  // MemberDecl
  if (TOK_IDENTIFIER == token
    || isBasicType(token)
    || TOK_KEY_VOID == token
    || TOK_KEY_CLASS == token
    || TOK_KEY_ENUM == token
    || TOK_KEY_INTERFACE == token
    || TOK_ANNOTATION_TYPE_DECLARATION == token) {
    return true;
  }

  return false;
}

bool isPrefixOp(int token) {
  if (TOK_OP_PLUS_PLUS == token
    || TOK_OP_MINUS_MINUS == token
    || TOK_OP_EXCLAMATION == token
    || TOK_OP_TILDE == token
    || TOK_OP_PLUS == token
    || TOK_OP_MINUS == token) {
    return true;
  }

  return false;
}

bool isPostfixOp(int token) {
  if (TOK_OP_PLUS_PLUS == token
    || TOK_OP_MINUS_MINUS == token) {
    return true;
  }

  return false;
}

bool isValidInitTokenOfClassBodyDeclaration(int token) {
  if (isModifierOrMemberMemberDeclCandidate(token)) {
    return true;
  }

  // Prior to a Block
  if (TOK_KEY_STATIC == token || TOK_LCURLY_BRACKET == token) {
    return true;
  }

  // A happy and lost semicolon
  if (TOK_SEMICOLON == token) {
    return true;
  }

  return false;
}

bool isValidInitTokenOfTypeDeclaration(int token) {
  if (isModifierToken(token)) {
    return true;
  }

  if (TOK_ANNOTATION == token
    || TOK_ANNOTATION_TYPE_DECLARATION == token
    || TOK_KEY_CLASS == token
    || TOK_KEY_INTERFACE == token
    || TOK_KEY_ENUM == token) {

    return true;
  }

  return false;
}

bool isVariableModifier(int token) {
  if (TOK_KEY_FINAL == token || TOK_ANNOTATION == token) {
    return true;
  }

  return false;
}

// Helper methods
void Parser::saveState(State &state) {
  state.diagErrorsSize = diag->errors.size();
  lexer->saveState(state);
}

void Parser::restoreState(State &state) {
  while (diag->errors.size() > state.diagErrorsSize) {
    diag->errors.pop_back();
  }

  lexer->restoreState(state);
}

/*
 * Annotation: @ QualifiedIdentifier [ ( [AnnotationElement] ) ]
 */
spAnnotation Parser::parseAnnotation() {
  spAnnotation annotation = spAnnotation(new Annotation);
  annotation->posTokAt = lexer->getCursor() - 1;
  lexer->getNextToken(); // Consume '@'

  // QualifiedIdentifier
  if (lexer->getCurToken() != TOK_IDENTIFIER) {
    annotation->err = true;
    diag->addErr(c4::ERR_EXP_QID, annotation->posTokAt);
    return annotation;
  }


  annotation->qualifiedId = spQualifiedIdentifier(new QualifiedIdentifier);
  parseQualifiedIdentifier(annotation->qualifiedId);

  // If the current token is '(' we consume the token and expect
  // an optional AnnotaionElement followed by ')'
  if (lexer->getCurToken() == TOK_LPAREN) {
    int openParenPos = lexer->getCursor() - 1;
    lexer->getNextToken(); // consume '('

    // Empty annotation element
    if (lexer->getCurToken() != TOK_RPAREN) {
      annotation->elem = spAnnotationElement(new AnnotationElement);
      parseAnnotationElement(annotation->elem);
      if (annotation->elem->err) {
        annotation->err = true;
        diag->addErr(
          c4::ERR_NVAL_ANNOT_ELEM, annotation->posTokAt, openParenPos);
        return annotation;
      }
    }

    if (lexer->getCurToken() != TOK_RPAREN) {
      annotation->err = true;
      diag->addErr(c4::ERR_EXP_LPAREN, annotation->posTokAt, openParenPos);
      return annotation;
    }

    lexer->getNextToken(); // consume ')'
  }

  return annotation;
}

/**
 * AnnotationElement: ElementValuePairs | ElementValue
 */
void Parser::parseAnnotationElement(spAnnotationElement &elem) {
  // ElementValuePairs
  parseElementValuePairs(elem->pairs);
  if (elem->pairs.size() > 0) {
    elem->opt = AnnotationElement::OPT_ELEMENT_VALUE_PAIRS;
    return;
  }

  // ElementValue
  elem->opt = AnnotationElement::OPT_ELEMENT_VALUE;
  elem->value = spElementValue(new ElementValue);
  parseElementValue(elem->value);
}

/**
 * AnnotationMethodOrConstantRest:
 *   AnnotationMethodRest
 *   ConstantDeclaratorsRest
 */
void Parser::parseAnnotationMethodOrConstantRest(
  spAnnotationMethodOrConstantRest &methodOrConstRest) {

  // AnnotationMethodRest
  if (lexer->getCurToken() == TOK_LPAREN) {
    methodOrConstRest->opt
      = AnnotationMethodOrConstantRest::OPT_ANNOTATION_METHOD_REST;
    methodOrConstRest->methRest = spAnnotationMethodRest(
      new AnnotationMethodRest);
    parseAnnotationMethodRest(methodOrConstRest->methRest);
    if (methodOrConstRest->methRest->err) {
      methodOrConstRest->addErr(-1);
    }

    return;
  }

  // ConstantDeclaratorsRest
  if (lexer->getCurToken() == TOK_LBRACKET
    || lexer->getCurToken() == TOK_OP_EQUALS) {

    methodOrConstRest->opt
      = AnnotationMethodOrConstantRest::OPT_CONSTANT_DECLARATORS_REST;
    methodOrConstRest->constRest = spConstantDeclaratorsRest(
      new ConstantDeclaratorsRest);
    parseConstantDeclaratorsRest(methodOrConstRest->constRest);
    if (methodOrConstRest->constRest->err) {
      methodOrConstRest->addErr(-1);
    }

    return;
  }

  // Error
  methodOrConstRest->addErr(-1);
}

/**
 * AnnotationMethodRest:
 *   '()' ['[]'] [default ElementValue]
 */
void Parser::parseAnnotationMethodRest(spAnnotationMethodRest &methRest) {
  // '('
  if (lexer->getCurToken() != TOK_LPAREN) {
    methRest->addErr(diag->addErr(c4::ERR_EXP_LPAREN, lexer->getCursor() - 1));
    return;
  }

  methRest->posLParen = lexer->getCursor() - 1;
  lexer->getNextToken(); // consume '('

  if (lexer->getCurToken() != TOK_RPAREN) {
    methRest->addErr(diag->addErr(c4::ERR_EXP_RPAREN, lexer->getCursor() - 1));
    return;
  }

  methRest->posRParen = lexer->getCursor() - 1;
  lexer->getNextToken(); // consume ')'

  // ['[]']
  if (lexer->getCurToken() == TOK_LBRACKET) {
    methRest->posLBracket = lexer->getCursor() - 1;
    lexer->getNextToken(); // consume '['

    if (lexer->getCurToken() != TOK_RBRACKET) {
      methRest->addErr(diag->addErr(
        c4::ERR_EXP_RBRACKET, lexer->getCursor() - 1));
      return;
    }

    methRest->posRBracket = lexer->getCursor() - 1;
    lexer->getNextToken(); // consume ']'
  }

  // [default ElementValue]
  if (lexer->getCurToken() != TOK_KEY_DEFAULT) {
    return;
  }

  methRest->tokDefault = spTokenExp(new TokenExp(
    lexer->getCursor() - tokenUtil.getTokenLength(
    lexer->getCurToken()), lexer->getCurToken()));
  lexer->getNextToken(); // consume 'default'

  methRest->elemVal = spElementValue(new ElementValue);
  parseElementValue(methRest->elemVal);
  if (methRest->elemVal->err) {
    methRest->addErr(-1);
  }
}

/**
 * Annotations.
 */
void Parser::parseAnnotations(std::vector<spAnnotation> &annotations) {
  while (lexer->getCurToken() == TOK_ANNOTATION) {
    spAnnotation annotation = parseAnnotation();
    annotations.push_back(annotation);
  }
}

/**
 * AnnotationTypeBody:
 *   [AnnotationTypeElementDeclarations]
 */
void Parser::parseAnnotationTypeBody(spAnnotationTypeBody &annTypeBody) {
  annTypeBody->elemDecls = spAnnotationTypeElementDeclarations(
    new AnnotationTypeElementDeclarations);

  State state;
  unsigned pos = 0;
  while (pos != lexer->getCursor()) {
    pos = lexer->getCursor();
    saveState(state);
    spAnnotationTypeElementDeclaration elemDecl =
      spAnnotationTypeElementDeclaration(new AnnotationTypeElementDeclaration);
    parseAnnotationTypeElementDeclaration(elemDecl);
    if (elemDecl->err) {
      restoreState(state);
      return;
    }

    annTypeBody->elemDecls->elemDecls.push_back(elemDecl);
  }
}

/**
 * AnnotationTypeDeclaration:
 *   @ interface Identifier AnnotationTypeBody
 */
void Parser::parseAnnotationTypeDeclaration(
  spAnnotationTypeDeclaration &annotationDecl) {

  // @
  annotationDecl->posAt = lexer->getCursor() - 1;
  lexer->getNextToken(); // consume '@'

  // interface
  if (lexer->getCurToken() != TOK_KEY_INTERFACE) {
    annotationDecl->addErr(diag->addErr(
      c4::ERR_EXP_INTERFACE, lexer->getCursor() - 1));
    return;
  }

  annotationDecl->tokInterface = spTokenExp(new TokenExp(
    lexer->getCursor() - tokenUtil.getTokenLength(
    lexer->getCurToken()), lexer->getCurToken()));
  lexer->getNextToken(); // consume 'interface'

  // Identifier
  if (lexer->getCurToken() != TOK_IDENTIFIER) {
    annotationDecl->addErr(diag->addErr(
      c4::ERR_EXP_IDENTIFIER, lexer->getCursor() - 1));
    return;
  }

  // AnnotationTypeBody
  annotationDecl->annTypeBody = spAnnotationTypeBody(new AnnotationTypeBody);
  parseAnnotationTypeBody(annotationDecl->annTypeBody);
  if (annotationDecl->annTypeBody->err) {
    annotationDecl->addErr(-1);
  }
}

/**
 * AnnotationTypeElementDeclaration:
 *   {Modifier} AnnotationTypeElementRest
 */
void Parser::parseAnnotationTypeElementDeclaration(
  spAnnotationTypeElementDeclaration &elemDecl) {

  elemDecl->modifier = spModifier(new Modifier);
  parseModifier(elemDecl->modifier);

  elemDecl->elemRest = spAnnotationTypeElementRest(
    new AnnotationTypeElementRest);
  parseAnnotationTypeElementRest(elemDecl->elemRest);
  if (elemDecl->elemRest->err) {
    elemDecl->addErr(-1);
  }
}

/**
 * AnnotationTypeElementRest:
 *   (1) Type Identifier AnnotationMethodOrConstantRest ;
 *   (2) ClassDeclaration
 *   (3) InterfaceDeclaration
 *   (4) EnumDeclaration
 *   (5) AnnotationTypeDeclaration
 */
void Parser::parseAnnotationTypeElementRest(
  spAnnotationTypeElementRest &elemRest) {

  // (1) Type Identifier AnnotationMethodOrConstantRest ;
  if (lexer->getCurToken() == TOK_IDENTIFIER
    || isBasicType(lexer->getCurToken())) {

    elemRest->opt = AnnotationTypeElementRest::OPT_METHOD_OR_CONSTANT;

    // Type
    elemRest->type = spType(new Type);
    parseType(elemRest->type);
    if (elemRest->type->err) {
      elemRest->addErr(-1);
      return;
    }

    // Identifier
    elemRest->id = spIdentifier(new Identifier(
      lexer->getCurTokenIni(), lexer->getCurTokenStr()));
    lexer->getNextToken(); // consume 'Identifier'

    // AnnotationMethodOrConstantRest
    elemRest->methodOrConstRest = spAnnotationMethodOrConstantRest(
      new AnnotationMethodOrConstantRest);
    parseAnnotationMethodOrConstantRest(elemRest->methodOrConstRest);
    if (elemRest->methodOrConstRest->err) {
      elemRest->addErr(-1);
    }

    // ';'
    if (lexer->getCurToken() != TOK_SEMICOLON) {
      elemRest->addErr(diag->addErr(
        c4::ERR_EXP_SEMICOLON, lexer->getCursor() - 1));
      return;
    }

    elemRest->posSemiColon = lexer->getCursor() - 1;
    lexer->getNextToken(); // consume ';'

    return;
  }

  // (2) ClassDeclaration
  if (lexer->getCurToken() == TOK_KEY_CLASS) {
    elemRest->opt = AnnotationTypeElementRest::OPT_CLASS_DECLARATION;
    elemRest->classDecl = spClassDeclaration(new ClassDeclaration);
    parseClassDeclaration(elemRest->classDecl);
    if (elemRest->classDecl->err) {
      elemRest->addErr(-1);
    }
    return;
  }

  // (3) InterfaceDeclaration
  if (lexer->getCurToken() == TOK_KEY_INTERFACE) {
    elemRest->opt = AnnotationTypeElementRest::OPT_INTERFACE_DECLARATION;
    elemRest->interfaceDecl = spInterfaceDeclaration(new InterfaceDeclaration);
    parseInterfaceDeclaration(elemRest->interfaceDecl);
    if (elemRest->interfaceDecl->err) {
      elemRest->addErr(-1);
    }
    return;
  }

  // (4) EnumDeclaration
  if (lexer->getCurToken() == TOK_KEY_ENUM) {
    elemRest->opt = AnnotationTypeElementRest::OPT_ENUM_DECLARATION;
    elemRest->enumDecl = spEnumDeclaration(new EnumDeclaration);
    parseEnumDeclaration(elemRest->enumDecl);
    if (elemRest->enumDecl->err) {
      elemRest->addErr(-1);
    }
    return;
  }

  // (5) AnnotationTypeDeclaration
  if (lexer->getCurToken() == TOK_ANNOTATION_TYPE_DECLARATION) {
    elemRest->opt = AnnotationTypeElementRest::OPT_ANNOTATION_DECLARATION;
    elemRest->annotationDecl = spAnnotationTypeDeclaration(
      new AnnotationTypeDeclaration);
    if (elemRest->annotationDecl->err) {
      elemRest->addErr(-1);
    }
    return;
  }

  // Error
  elemRest->addErr(-1);
}

/**
 * Arguments: '(' [ Expression { , Expression }] ')'
 */
void Parser::parseArguments(spArguments &args) {
  if (lexer->getCurToken() != TOK_LPAREN) {
    args->addErr(diag->addErr(c4::ERR_EXP_ARGUMENTS, lexer->getCursor() - 1));
    return;
  }

  args->posLParen = lexer->getCursor() - 1;
  lexer->getNextToken(); // consume '('

  if (lexer->getCurToken() == TOK_RPAREN) {
    args->posRParen = lexer->getCursor() - 1;
    lexer->getNextToken(); // consume ')'
    return;
  }

  // Expression
  args->expr = spExpression(new Expression);
  parseExpression(args->expr);
  if (args->expr->isEmpty()) {
    return;
  }

  // { , Expression }
  while (lexer->getCurToken() == TOK_COMMA) {
    unsigned int posComma = lexer->getCursor() - 1;
    lexer->getNextToken(); // consume ','

    spExpression expr = spExpression(new Expression);
    parseExpression(expr);
    if (expr->isEmpty()) {
      break;
    }

    std::pair<unsigned int, spExpression> pair;
    pair.first = posComma;
    pair.second = expr;
    args->exprs.push_back(pair);
  }

  if (lexer->getCurToken() == TOK_RPAREN) {
    args->posRParen = lexer->getCursor() - 1;
    lexer->getNextToken(); // consume ')'
    return;
  }

  // Error
  args->addErr(diag->addErr(c4::ERR_EXP_RCURLY_BRACKET,
    lexer->getCurTokenIni(), lexer->getCursor()));
}

/**
 * ArrayCreatorRest:
 *   '['
 *     ( ']' { '[]' } ArrayInitializer |
 *       Expression ']' { '[' Expression ']' } { '[]' } )
 *
 * Non-terminals are enclosed in square brackets.
 */
void Parser::parseArrayCreatorRest(spArrayCreatorRest &arrayCreatorRest) {
  // We look ahead to decide if we have option 1 or option 2
  State openBracketState;
  saveState(openBracketState);
  lexer->getNextToken(); // consume '['
  int lookahead = lexer->getCurToken();
  restoreState(openBracketState);

  // Option 1
  if (lookahead == TOK_RBRACKET) {
    arrayCreatorRest->opt = ArrayCreatorRest::OPT_ARRAY_INITIALIZER;
    arrayCreatorRest->opt1 = spArrayCreatorRestOpt1(new ArrayCreatorRestOpt1());
    parseArrayCreatorRestOpt1(arrayCreatorRest->opt1);
    if (arrayCreatorRest->opt1->err) {
      arrayCreatorRest->addErr(-1);
    }
    return;
  }

  // Option 2
  arrayCreatorRest->opt = ArrayCreatorRest::OPT_EXPRESSION;
  arrayCreatorRest->opt2 = spArrayCreatorRestOpt2(new ArrayCreatorRestOpt2);
  parseArrayCreatorRestOpt2(arrayCreatorRest->opt2);
  if (arrayCreatorRest->opt2->err) {
    arrayCreatorRest->addErr(-1);
  }
}

/**
 * ArrayCreatorRestOpt1:
 *   '[' ']' { '[]' } ArrayInitializer
 */
void Parser::parseArrayCreatorRestOpt1(spArrayCreatorRestOpt1 &opt1) {
  // Array Depth
  parseArrayDepth(opt1->arrayDepth);

  if (opt1->arrayDepth.size() < 1) {
    opt1->addErr(diag->addErr(c4::ERR_EXP_ARRAY, lexer->getCursor() - 1));
    return;
  }
